# ugv_rover_pt_scan

./: .env.example  .gitignore  99-nas-route  CLAUDE.md  README.md  ugv.sh  ugv_probe.py  ugv_probe_container.json  ugv_probe_host.json
config/: params.yaml
docker/: Dockerfile  compose.yml
docs/: LLM_ENGINEER_TEST_PROMPT.md  PROVISIONING.md  SYSTEM_REFERENCE.md
macos/: com.ugv.monitor.plist  install_monitor.sh  ugv_monitor.sh
ros2_ws/src/ugv_base/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/ugv_base/ugv_base/: __init__.py  bridge_node.py
ros2_ws/src/ugv_rover_pt_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/ugv_rover_pt_bringup/launch/: bringup.launch.py
ros2_ws/src/ugv_rover_pt_gimbal_serial/: package.xml  setup.cfg  setup.py
ros2_ws/src/ugv_rover_pt_gimbal_serial/ugv_rover_pt_gimbal_serial/: gimbal_node.py
ros2_ws/src/ugv_rover_pt_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/ugv_rover_pt_offload/: package.xml  setup.cfg  setup.py
ros2_ws/src/ugv_rover_pt_offload/ugv_rover_pt_offload/: offload.py
ros2_ws/src/ugv_rover_pt_scan_mission/: package.xml  setup.cfg  setup.py
ros2_ws/src/ugv_rover_pt_scan_mission/action/: ScanAndOffload.action
ros2_ws/src/ugv_rover_pt_scan_mission/ugv_rover_pt_scan_mission/: scan_mission_node.py
scripts/: build_container.sh  enter_container.sh  install_systemd.sh  run_bringup.sh  run_mission_once.sh  run_status_tui.sh  status_tui.py
systemd/: ugv-rover-pt.service
tui/: PROPOSAL.md  package.json  tsconfig.json
tui/scripts/: run.sh
tui/src/: App.tsx  index.tsx
tui/src/components/: BatteryPanel.tsx  ConnectionPanel.tsx  GimbalControl.tsx  GimbalPanel.tsx  Header.tsx  HelpOverlay.tsx  IMUPanel.tsx  SensorPanel.tsx  index.ts
tui/src/hooks/: index.ts  useRosBridge.ts  useService.ts  useTopic.ts
tui/src/lib/: config.ts  types.ts
