<?xml version="1.0"?>
<package format="3">
  <name>ugv_base</name>
  <version>0.1.0</version>
  <description>ROS 2 bridge for Waveshare UGV Rover ESP32 UART JSON protocol (CMD_ROS_CTRL, feedback flow, heartbeat).</description>

  <maintainer email="dev@example.com">BoxHead</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

  <!-- pyserial via Ubuntu package -->
  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
