<?xml version="1.0"?>
<package format="3">
  <name>ugv_rover_pt_gimbal_serial</name>
  <version>0.1.0</version>
  <description>Waveshare UGV Rover PT gimbal serial JSON driver (T=133)</description>
  <maintainer email="you@local">BoxHead</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
