<?xml version="1.0"?>
<package format="3">
  <name>ugv_rover_pt_offload</name>
  <version>0.1.0</version>
  <description>Offload helper (rsync over SSH) for UGV mission bundles</description>
  <maintainer email="you@local">BoxHead</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
